overlays/development/spi/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: solarperformanceinsight
  labels:
    app: solarperformanceinsight
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: dev.solarperformanceinsight.org
    http:
      paths:
      - path: /
        backend:
          serviceName: solarperformanceinsight
          servicePort: http
  tls:
  - hosts:
      - dev.solarperformanceinsight.org
    secretName: spi-tls
